<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_power"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.noy.dominatepc.activities.PowerActivity">

    <LinearLayout
        android:id="@+id/power_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restart_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:gravity="center"
                android:text="@string/restart"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shutdown_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:gravity="center"
                android:text="@string/shutdown"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sleep_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:gravity="center"
                android:text="@string/sleep"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/power_buttons_layout"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="50dp"
        android:text="@string/power_warning_message"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</RelativeLayout>
